# bucket

./: CMakeLists.txt  Makefile  README  build  compile  install  link  makefile  makefile.ndebug  program  readme  todo
code/: abstract_syntax_tree.cxx  abstract_syntax_tree.hxx  ast.cxx  ast.hxx  builtin.cxx  builtin.hxx  code_generator.cxx  code_generator.hxx  code_generator_setup.cxx  code_generator_setup.hxx  codegen.cxx  codegen.hxx  garbage_collector.cxx  garbage_collector.hxx  lexer.cxx  lexer.hxx  main.cxx  misc.hxx  miscellaneous.cxx  miscellaneous.hxx  objects.cxx  objects.hxx  parser.cxx  parser.hxx  run_compiler.cxx  run_compiler.hxx  runtime.c  runtime.cxx  runtime.h  runtime.hxx  source.cxx  source.hxx  source_file.cxx  source_file.hxx  symbol_table.cxx  symbol_table.hxx  symtable.cxx  symtable.hxx  token.cxx  token.hxx
docs/: design  grammar  install  lexical  todo
examples/: 0_hello_world_syscall.b  0_system.b  1_integer_math.b  1_return_code.b  2_assignment.b  2_void_libcall.b  3.b  3_arg_libcall.b  3_fp_and_bools.p  4_indirect_libcall.b  4_loops.b  5_hello_world.b
specification/: builtins  grammar  lexical  object_model
src/: abstract_syntax_tree.cxx  abstract_syntax_tree.hxx  comterpreter.cxx  comterpreter.hxx  garbage_collector.cxx  garbage_collector.hxx  lexer.cxx  lexer.hxx  main.cxx  miscellaneous.hxx  objects.cxx  objects.hxx  parser.cxx  parser.hxx  polymorphism.hxx  source_file.cxx  source_file.hxx  token.cxx  token.hxx  tree_transform.cxx  tree_transform.hxx
tests/: compile.cxx  example.b  highlight_between_first_two_es.cxx  highlight_first_letter_e.cxx  highlight_letter_e.cxx  lex.cxx  parse.cxx  print_symbol_table_pass_0.cxx  print_symbol_table_pass_1.cxx  print_symbol_table_pass_2.cxx  print_symbol_table_pass_3.cxx  print_symbol_table_pass_4.cxx
