cmake_minimum_required(VERSION 3.13.1 FATAL_ERROR)
project(bucket VERSION 0.0.0 LANGUAGES CXX)

add_library(bucket code/source_file.cxx)
set_target_properties(bucket PROPERTIES CXX_EXTENSIONS OFF CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(bucket PRIVATE code)

add_executable(highlight_letter_e tests/highlight_letter_e.cxx)
set_target_properties(highlight_letter_e PROPERTIES CXX_EXTENSIONS OFF CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(highlight_letter_e PRIVATE code)
target_link_libraries(highlight_letter_e bucket)

add_executable(highlight_first_letter_e tests/highlight_first_letter_e.cxx)
set_target_properties(highlight_first_letter_e PROPERTIES CXX_EXTENSIONS OFF CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(highlight_first_letter_e PRIVATE code)
target_link_libraries(highlight_first_letter_e bucket)

add_executable(highlight_between_first_two_es tests/highlight_between_first_two_es.cxx)
set_target_properties(highlight_between_first_two_es PROPERTIES CXX_EXTENSIONS OFF CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(highlight_between_first_two_es PRIVATE code)
target_link_libraries(highlight_between_first_two_es bucket)


if (CMAKE_BUILD_TYPE MATCHES Debug)
  add_definitions(-DBUCKET_DEBUG)
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 6.0.0)
  message(STATUS "Detected clang 6.0.0 or greater")
  if(CMAKE_BUILD_TYPE MATCHES Production)
    target_compile_options(bucket PRIVATE -pedantic -Weverything -Wno-shadow-field-in-constructor -Wno-padded -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-weak-vtables -Ofast -flto -fstrict-vtable-pointers -ffast-math -fwhole-program-vtables -march=native -mtune=native)
    target_compile_options(highlight_letter_e PRIVATE -pedantic -Weverything -Wno-shadow-field-in-constructor -Wno-padded -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-weak-vtables -Ofast -flto -fstrict-vtable-pointers -ffast-math -fwhole-program-vtables -march=native -mtune=native)
    target_compile_options(highlight_first_letter_e PRIVATE -pedantic -Weverything -Wno-shadow-field-in-constructor -Wno-padded -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-weak-vtables -Ofast -flto -fstrict-vtable-pointers -ffast-math -fwhole-program-vtables -march=native -mtune=native)
    target_compile_options(highlight_between_first_two_es PRIVATE -pedantic -Weverything -Wno-shadow-field-in-constructor -Wno-padded -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-weak-vtables -Ofast -flto -fstrict-vtable-pointers -ffast-math -fwhole-program-vtables -march=native -mtune=native)
  elseif(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_options(bucket PRIVATE -g)
    target_compile_options(highlight_letter_e PRIVATE -g)
    target_compile_options(highlight_first_letter_e PRIVATE -g)
    target_compile_options(highlight_between_first_two_es PRIVATE -g)
  endif()
endif()
